# tdengine-desktop

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  config.toml  input.css  package-lock.json  package.json  run.sh  tailwind.config.js  watch_css.sh  watch_dio.sh
src/: config.rs  log.rs  main.rs  message.rs  td.rs
