[package]
name = "dioxus-td"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
anyhow = "1.0.76"
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_json = "1.0.108"
taos = { version = "0.11.0", default-features = false, features = ["native"] }
tokio = { version = "1.35.1", features = ["full"] }
once_cell = "1.19.0"
lazy_static = "1.4.0"
ssh2 = "0.9.4"
ssh_jumper = "0.4.0"
toml = "0.8.8"

